--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -17,7 +17,8 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="{{ path('book')}}">Books</a></li>
+                    <li><a href="{{ path('book')}}">Books</a></li>
+                    <li><a href="{{ path('cart')}}">Cart</a></li>
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                         <li><a href="{{ logout_path('main') }}">Logout</a></li>
                     {% else %}
