--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -6,7 +6,6 @@
     <div class="row title_row">
         <div class="col-sm-2 col-md-2">
             <a href="{{ path('book_edit') }}" class="btn btn-sm btn-success" type="button">
-                <span class="fas fa-plus" aria-hidden="true"></span>
                 Add
             </a>
         </div>
@@ -27,15 +26,15 @@
                         {% if is_granted('ROLE_USER') %}
                         <td>
                             <a type="button" class="btn btn-sm btn-default"
-                               href="{{ path('cart_add',{'bookId':book.id, 'page':app.request.query.get("page")}) }}"><span class="fas fa-pencil-alt"></span>Add</a>
+                               href="{{ path('cart_add',{'bookId':book.id, 'page':app.request.query.get("page")}) }}">Add</a>
                         </td>
                         {% endif %}
                         {% if is_granted('ROLE_ADMIN') %}
                         <td><a type="button" class="btn btn-sm btn-default"
-                               href="{{ path('book_edit',{'bookId':book.id, 'page':app.request.query.get("page")}) }}"><span class="fas fa-pencil-alt"></span>Edit</a>
+                               href="{{ path('book_edit',{'bookId':book.id, 'page':app.request.query.get("page")}) }}">Edit</a>
                             <a type="button" class="btn btn-sm btn-default red"
                                onclick="return confirm('{% trans %}Are you sure you want to delete{% endtrans %}?')"
-                               href="{{ path('book_delete',{'bookId':book.id, 'page':app.request.query.get("page")}) }}"><span class="far fa-trash-alt"></span>Delete</a></td>
+                               href="{{ path('book_delete',{'bookId':book.id, 'page':app.request.query.get("page")}) }}">Delete</a></td>
                         {% endif %}
                     </tr>
                 {% endfor %}
