--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,20 +1,40 @@
-{% extends 'base.html.twig' %}
+{% extends 'main.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/CartController.php'|file_link(0) }}">src/Controller/CartController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/cart/index.html.twig'|file_link(0) }}">templates/cart/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% block content %}
+    <br />
+    <div class="row title_row">
+        <div class="col-sm-2 col-md-2">
+            <a href="{{ path('cart_order') }}" class="btn btn-sm btn-success" type="button">
+                Order
+            </a>
+        </div>
+        <div class="col-sm-10 col-md-10">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12 col-md-12">
+            <table class="table table-striped">
+                <tbody>
+                {% for book in cart_paginated %}
+                    <tr>
+                        <td>{{ book.item.name }}</td>
+                        <td>{{ book.item.price }}</td>
+                        <td>{{ book.count }}</td>
+                        <td>
+                            <a type="button" class="btn btn-sm btn-default"
+                               href="{{ path('cart_remove',{'bookId':book.item.id, 'page':app.request.query.get("page")}) }}">Remove</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 col-md-2"></div>
+        <div class="col-sm-8 col-md-8">
+            {{ knp_pagination_render(cart_paginated) }}
+        </div>
+        <div class="col-sm-2 col-md-2"></div>
+    </div>
 {% endblock %}
