--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -4,12 +4,13 @@
     <br />
     {% if is_granted('ROLE_USER') %}
     <div class="row title_row">
-        <div class="col-sm-2 col-md-2">
+        <div class="col-sm-3 col-md-3">
             <a href="{{ path('cart_order') }}" class="btn btn-sm btn-success" type="button">
                 Order
             </a>
+            Total Price: {{ total_price }}
         </div>
-        <div class="col-sm-10 col-md-10">
+        <div class="col-sm-9 col-md-9">
         </div>
     </div>
     {% endif %}
